--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "gulpfile.js",
   "type": "module",
   "dependencies": {
-    "jquery": "^3.6.0",
-    "node-gyp": "^9.1.0"
+    "jquery": "^3.6.0"
   },
   "devDependencies": {
     "browser-sync": "^2.27.7",
@@ -39,8 +38,12 @@
     "gulp-webp-html-nosvg": "^1.0.5",
     "gulp-webpcss": "^1.1.1",
     "gulp-zip": "^5.1.0",
+    "node-gyp": "^9.3.1",
+    "node-sass": "^8.0.0",
     "vinyl-ftp": "^0.6.1",
-    "webp-converter": "2.2.3"
+    "webp-converter": "2.2.3",
+    "webpack": "^5.75.0",
+    "webpack-stream": "^7.0.0"
   },
   "scripts": {
     "dev": "gulp",
