--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "gulp-pug": "^5.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.1.3",
-    "gulp-sass": "^4.1.1",
+    "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-svg-sprite": "^1.5.0",
     "gulp-ttf2woff2": "^4.0.1",
@@ -40,6 +40,7 @@
     "gulp-zip": "^5.1.0",
     "node-gyp": "^9.3.1",
     "node-sass": "^8.0.0",
+    "sass": "^1.65.1",
     "vinyl-ftp": "^0.6.1",
     "webp-converter": "2.2.3",
     "webpack": "^5.75.0",
