some fixes, fixes fonts

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "gulp-assembly",
+  "name": "gulp-build",
   "version": "1.0.0",
-  "description": "Cборка gulp",
+  "description": "Build Gulp",
   "main": "gulpfile.js",
   "type": "module",
   "dependencies": {
-    "jquery": "^3.6.0"
+    "jquery": "^3.6.0",
+    "swiper": "^10.2.0"
   },
   "devDependencies": {
     "browser-sync": "^2.27.7",
